Добавлен фон на сайт

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,5 @@
 ﻿body {
-    background-color:blue;
+    background-image: url(../images/trava.jpg);
     background-size: cover;
     height: 100%;
 }
-
-
