--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,12 @@
-﻿body {
-    background-image: url(../images/trava.jpg);
+﻿
+
+html, body {
+    background: url(../images/trava.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
-    height: 100%;
+}
+.card {
+    margin-top: 10%;
 }
