--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,4 @@
-﻿
-
-html, body {
+﻿html, body {
     background: url(../images/trava.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
